--- a/.gitignore
+++ b/.gitignore
@@ -47,10 +47,14 @@ example/ios/Pods
 # Ruby
 example/vendor/
 example/node_modules/
+example/yarn.lock
+example/package-lock.json
 
 # node.js
 #
 node_modules/
+yarn.lock
+package-lock.json
 npm-debug.log
 yarn-debug.log
 yarn-error.log
