--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
+    "@types/d3": "^7.4.0",
+    "@types/d3-scale": "^4.0.2",
     "@types/jest": "^28.1.2",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
@@ -246,7 +248,10 @@
     ]
   },
   "dependencies": {
-    "@shopify/react-native-skia": "^0.1.157",
+    "@shopify/react-native-skia": "^0.1.160",
+    "d3": "^7.6.1",
+    "d3-scale": "^4.0.2",
+    "moment": "^2.29.4",
     "react-native-reanimated": "^2.12.0"
   }
 }
