--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@shopify/react-native-skia": "^0.1.157",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-reanimated": "^2.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
