--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn install && yarn example pods",
-    "ios": "cd example && yarn ios"
+    "run:ios": "cd example && yarn ios",
+    "run:android": "cd example && yarn android"
   },
   "keywords": [
     "progress circle",
@@ -248,6 +249,7 @@
   },
   "dependencies": {
     "@shopify/react-native-skia": "^0.1.157",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.12.0"
   }
 }
