--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "release": "release-it",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn install && yarn example pods",
+    "run:start": "cd example && yarn start",
     "run:ios": "cd example && yarn ios",
     "run:android": "cd example && yarn android"
   },
