--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@mindinventory/react-native-neopop": ["./src/index"]
+      "@mindinventory/react-native-neopop": ["./src/index"],
+      "@mindinventory/react-native-neopop-button": [
+        "./sdk/neopop-button/src/index"
+      ]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
