--- a/sdk/circular-progress/package.json
+++ b/sdk/circular-progress/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mindinventory/react-native-neopop",
-  "version": "1.0.0",
+  "name": "@mindinventory/react-native-circular-progress",
+  "version": "0.1.0",
   "description": "test",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -30,30 +30,24 @@
     "test": "jest",
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
-    "prepare": "husky install",
+    "prepare": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
-    "bootstrap": "yarn example && yarn install && yarn example pods"
+    "bootstrap": "yarn example && yarn install && yarn example pods",
+    "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build"
   },
   "keywords": [
-    "progress circle",
-    "card layout",
-    "card",
-    "floating",
-    "neopop",
-    "button",
-    "circiel progress",
     "react-native",
     "ios",
     "android"
   ],
-  "repository": "https://github.com/Mindinventory/react-native-neopop",
-  "author": "Mindinventory",
+  "repository": "https://github.com/TusharSanchaniya-mi/mindinventory-react-native-neopop-button",
+  "author": "Tushar Sanchaniya <tushar.sanchaniya@mindinventory.com> (https://github.com/TusharSanchaniya-mi)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Mindinventory/react-native-neopop/issues"
+    "url": "https://github.com/TusharSanchaniya-mi/mindinventory-react-native-neopop-button/issues"
   },
-  "homepage": "https://github.com/Mindinventory/react-native-neopop#readme",
+  "homepage": "https://github.com/TusharSanchaniya-mi/mindinventory-react-native-neopop-button#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -66,21 +60,16 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
     "commitlint": "^17.0.2",
+    "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-import-order-autofix": "^0.8.3",
-    "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "husky": "^8.0.1",
     "jest": "^28.1.1",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-builder-bob": "^0.20.0",
+    "react-native": "0.70.6",
+    "react-native-builder-bob": "^0.20.1",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
   },
@@ -91,6 +80,10 @@
     "react": "*",
     "react-native": "*"
   },
+  "engines": {
+    "node": ">= 16.0.0"
+  },
+  "packageManager": "^yarn@1.22.15",
   "jest": {
     "preset": "react-native",
     "modulePathIgnorePatterns": [
@@ -122,29 +115,11 @@
   },
   "eslintConfig": {
     "root": true,
-    "plugins": [
-      "import",
-      "sort-keys-fix",
-      "react-hooks",
-      "eslint-plugin-no-inline-styles"
-    ],
     "extends": [
       "@react-native-community",
-      "prettier",
-      "plugin:react-hooks/recommended"
+      "prettier"
     ],
     "rules": {
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "error",
-      "no-inline-styles/no-inline-styles": 2,
-      "sort-keys-fix/sort-keys-fix": [
-        "error",
-        "asc",
-        {
-          "caseSensitive": false,
-          "natural": true
-        }
-      ],
       "prettier/prettier": [
         "error",
         {
@@ -154,70 +129,7 @@
           "trailingComma": "es5",
           "useTabs": false
         }
-      ],
-      "no-restricted-imports": [
-        "error"
-      ],
-      "no-console": [
-        "error"
-      ],
-      "no-shadow": "off",
-      "sort-imports": [
-        "error",
-        {
-          "ignoreCase": true,
-          "ignoreDeclarationSort": true,
-          "ignoreMemberSort": false
-        }
-      ],
-      "import/order": [
-        "error",
-        {
-          "groups": [
-            [
-              "external",
-              "builtin"
-            ],
-            "internal",
-            [
-              "sibling",
-              "parent"
-            ],
-            "index"
-          ],
-          "pathGroups": [
-            {
-              "pattern": "@(react|react-native)",
-              "group": "external",
-              "position": "before"
-            },
-            {
-              "pattern": "@mindinventory/**",
-              "group": "internal"
-            },
-            {
-              "pattern": "@src/**",
-              "group": "internal"
-            }
-          ],
-          "pathGroupsExcludedImportTypes": [
-            "internal",
-            "react"
-          ],
-          "newlines-between": "always",
-          "alphabetize": {
-            "order": "asc",
-            "caseInsensitive": true
-          }
-        }
-      ],
-      "import/newline-after-import": [
-        "warn",
-        {
-          "count": 1
-        }
-      ],
-      "import/no-duplicates": "error"
+      ]
     }
   },
   "eslintIgnore": [
@@ -236,7 +148,6 @@
     "output": "lib",
     "targets": [
       "commonjs",
-      { "babelrc": true, "copyFlow": true },
       "module",
       [
         "typescript",
