--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@shopify/react-native-skia": "^0.1.157",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5"
   },
