--- a/package.json
+++ b/package.json
@@ -248,6 +248,8 @@
   },
   "dependencies": {
     "@shopify/react-native-skia": "^0.1.157",
-    "react-native-reanimated": "^2.12.0"
+    "react-native-reanimated": "^2.12.0",
+    "d3": "^7.6.1",
+    "moment": "^2.29.4"
   }
 }
