--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start --reset-cache",
-    "pods": "pod-install --quiet"
+    "pods": "pod-install --quiet",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.14",
