--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mindinventory/react-native-skia-components",
   "version": "1.0.2",
-  "description": "test",
+  "description": "This library provide UIKit like Card, NeoPop button, Floating button and Flipview using React Native SKIA.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
