--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@mindinventory/react-native-skia-components",
-  "version": "1.0.1",
-  "description": "test",
+  "version": "1.0.2",
+  "description": "This library provide UIKit like Card, NeoPop button, Floating button and Flipview using React Native SKIA.",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
   "react-native": "src/index",
   "source": "src/index",
   "files": [
+    "sdk",
     "src",
     "lib",
     "android",
@@ -31,6 +32,7 @@
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "husky install",
+    "prepack": "bob build",
     "release": "release-it",
     "example": "yarn --cwd example",
     "bootstrap": "yarn example && yarn install && yarn example pods",
