feat(floating button): strokes and floating button new types added

--- a/package.json
+++ b/package.json
@@ -99,7 +99,10 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "@shopify/react-native-skia": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-reanimated": "*"
   },
   "jest": {
     "preset": "react-native",
