--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "@shopify/react-native-skia": "^0.1.157",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-deck-swiper": "^2.0.12",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
