--- a/package.json
+++ b/package.json
@@ -257,6 +257,7 @@
   },
   "dependencies": {
     "@shopify/react-native-skia": "^0.1.157",
+    "react-native-deck-swiper": "^2.0.12",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.12.0"
   }
